--- a/transition-activity/main.css
+++ b/transition-activity/main.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
 
-body  {
-  font-family: 'Josefin Sans', sans-serif;
+body {
+  font-family: "Josefin Sans", sans-serif;
   text-align: center;
 }
 
@@ -17,11 +17,15 @@ img {
 
 button {
   padding: 1em;
-  margin: .2em;
-  font-family: 'Josefin Sans', sans-serif;
+  margin: 0.2em;
+  font-family: "Josefin Sans", sans-serif;
   font-size: 1.5em;
+  background-color: ghostwhite;
+
 }
 
 button:hover {
   background-color: cornflowerblue;
+  transition: 2s;
+
 }
